// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly increments counter 1`] = `
<div>
  <button
    color="red"
    id="counter"
    onClick={[Function]}
  >
    count: 
    0
  </button>
</div>
`;

exports[`correnctly increments the counter 1`] = `
<div>
  <button
    id="counter"
    onClick={[Function]}
  >
    count: 
    0
  </button>
</div>
`;

exports[`ecpect should component update to return false 1`] = `
<div>
  <button
    id="counter"
    onClick={[Function]}
  >
    count: 
    0
  </button>
</div>
`;

exports[`expect to render CounterButton component 1`] = `
<div>
  <button
    color="red"
    id="counter"
    onClick={[Function]}
  >
    count: 
    0
  </button>
</div>
`;
